Fixed spacing on records

--- a/sugarcrm/styleguide/less/clients/summer/components/record.less
+++ b/sugarcrm/styleguide/less/clients/summer/components/record.less
@@ -24,7 +24,7 @@
     }
 
     .row-fluid {
-        margin: 6px 0;
+        margin: 10px 0;
     }
 
     .record-edit-link-wrapper {
